--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<title>Oblo - Showcase Portfolio & Agency Template</title>
+	<title>Dave Craft - Portfólio & Agência</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="HandheldFriendly" content="true">
-	<meta name="author" content="beshleyua" />
-	<meta name="description" content="Creative Agency Portfolio HTML5 Template. Best suited for Portfolio, Agency, Photography, Showcases." />
+	<meta name="Dave Craft" content="true">
+	<meta name="author" content="davecraft" />
+	<meta name="description" content="Agência Criativa de Design" />
 	
 	<!-- fontawesome CSS -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.0/css/all.css">
@@ -79,19 +79,19 @@
 								<div class="menu-full">
 									<ul>
 										<li class="has-children">
-											<a href="#" class="splitting-text-anim-2" data-splitting="chars">home</a>
+											<a href="#" class="splitting-text-anim-2" data-splitting="chars">início</a>
 											<ul>
 												<li class="scrolla-element-anim-1">
-													<a href="index.html" class="splitting-text-anim-1" data-splitting="chars">main slider</a>
+													<a href="index.html" class="splitting-text-anim-1" data-splitting="chars">slider principal</a>
 												</li>
 												<li class="scrolla-element-anim-1">
-													<a href="index-half.html" class="splitting-text-anim-1" data-splitting="chars">half slider</a>
+													<a href="index-half.html" class="splitting-text-anim-1" data-splitting="chars">slider parcial</a>
 												</li>
 												<li class="scrolla-element-anim-1">
-													<a href="index-fullscreen.html" class="splitting-text-anim-1" data-splitting="chars">fullscreen slider</a>
+													<a href="index-fullscreen.html" class="splitting-text-anim-1" data-splitting="chars">slider tela cheia</a>
 												</li>
 												<li class="scrolla-element-anim-1">
-													<a href="index-carousel.html" class="splitting-text-anim-1" data-splitting="chars">horizontal carousel</a>
+													<a href="index-carousel.html" class="splitting-text-anim-1" data-splitting="chars">carrossel horizontal</a>
 												</li>
 												<li class="scrolla-element-anim-1">
 													<a href="index-onepage.html" class="splitting-text-anim-1" data-splitting="chars">onepage</a>
@@ -102,41 +102,41 @@
 											<a href="#" class="splitting-text-anim-2" data-splitting="chars">about</a>
 											<ul>
 												<li class="scrolla-element-anim-1">
-													<a href="about-us.html" class="splitting-text-anim-1" data-splitting="chars">about us</a>
+													<a href="about-us.html" class="splitting-text-anim-1" data-splitting="chars">quem somos</a>
 												</li>
 												<li class="scrolla-element-anim-1">
-													<a href="about.html" class="splitting-text-anim-1" data-splitting="chars">about me</a>
+													<a href="about.html" class="splitting-text-anim-1" data-splitting="chars">sobre nós</a>
 												</li>
 											</ul>
 										</li>
 										<li class="has-children">
-											<a href="#" class="splitting-text-anim-2" data-splitting="chars">work</a>
+											<a href="#" class="splitting-text-anim-2" data-splitting="chars">trabalhos</a>
 											<ul>
 												<li class="scrolla-element-anim-1">
-													<a href="works-2-column.html" class="splitting-text-anim-1" data-splitting="chars">works 2 column</a>
+													<a href="works-2-column.html" class="splitting-text-anim-1" data-splitting="chars">trabalhos coluna 2</a>
 												</li>
 												<li class="scrolla-element-anim-1">
-													<a href="works-3-column.html" class="splitting-text-anim-1" data-splitting="chars">works 3 column</a>
+													<a href="works-3-column.html" class="splitting-text-anim-1" data-splitting="chars">trabalhos coluna 3</a>
 												</li>
 												<li class="scrolla-element-anim-1">
-													<a href="works-creative.html" class="splitting-text-anim-1" data-splitting="chars">works creative</a>
+													<a href="works-creative.html" class="splitting-text-anim-1" data-splitting="chars">trabalhos criativos</a>
 												</li>
 												<li class="scrolla-element-anim-1">
-													<a href="gallery-2-column.html" class="splitting-text-anim-1" data-splitting="chars">gallery 2 column</a>
+													<a href="gallery-2-column.html" class="splitting-text-anim-1" data-splitting="chars">galeria coluna 2</a>
 												</li>
 												<li class="scrolla-element-anim-1">
-													<a href="gallery-3-column.html" class="splitting-text-anim-1" data-splitting="chars">gallery 3 column</a>
+													<a href="gallery-3-column.html" class="splitting-text-anim-1" data-splitting="chars">galeria coluna 3</a>
 												</li>
 												<li class="scrolla-element-anim-1">
-													<a href="work-single.html" class="splitting-text-anim-1" data-splitting="chars">work single</a>
+													<a href="work-single.html" class="splitting-text-anim-1" data-splitting="chars">trabalho simples</a>
 												</li>
 												<li class="scrolla-element-anim-1">
-													<a href="work-single-v2.html" class="splitting-text-anim-1" data-splitting="chars">work single 2</a>
+													<a href="work-single-v2.html" class="splitting-text-anim-1" data-splitting="chars">trabalho simples 2</a>
 												</li>
 											</ul>
 										</li>
 										<li>
-											<a href="contacts.html" class="splitting-text-anim-2" data-splitting="chars">contact</a>
+											<a href="contacts.html" class="splitting-text-anim-2" data-splitting="chars">contato</a>
 										</li>
 										<li>
 											<a href="blog.html" class="splitting-text-anim-2" data-splitting="chars">blog</a>
@@ -152,16 +152,10 @@
 				<!-- social -->
 				<div class="menu-social-links">
 					<a href="#" target="blank" class="splitting-text-anim-1" data-splitting="chars">
-						Instagram
+						Github
 					</a>
 					<a href="#" target="blank" class="splitting-text-anim-1" data-splitting="chars">
-						Facebook
-					</a>
-					<a href="#" target="blank" class="splitting-text-anim-1" data-splitting="chars">
-						Twitter
-					</a>
-					<a href="#" target="blank" class="splitting-text-anim-1" data-splitting="chars">
-						linkedin
+						Workana
 					</a>
 				</div>
 		
@@ -190,14 +184,13 @@
 
 											<!-- title -->
 											<div class="titles">
-												<div class="label splitting-text-anim-1" data-splitting>featured work</div>
-												<div class="subtitle splitting-text-anim-1" data-splitting>Photographs are just</div>
+												<div class="label splitting-text-anim-1" data-splitting>destque</div>
+												<div class="subtitle splitting-text-anim-1" data-splitting>Design é</div>
 												<div class="title">
 													<div class="title-inner splitting-text-anim-2" data-splitting>
-														light<br />
-														<em>&</em> <strong>time.</strong>
+														técnica<br />
+														<em>&</em> <strong>paixão.</strong>
 													</div>
-													<span class="author-text splitting-text-anim-1" data-splitting>- Aza Holmes</span>
 												</div>
 											</div>
 
@@ -205,7 +198,7 @@
 									</div>
 								</div>
 								<div class="view-btn">
-									<a href="work-single.html" data-splitting class="splitting-text-anim-1">view work</a>
+									<a href="work-single.html" data-splitting class="splitting-text-anim-1">veja os trabalhos</a>
 								</div>
 							</div>
 
@@ -223,12 +216,12 @@
 										<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 									
 											<div class="titles right dark">
-												<div class="label splitting-text-anim-1" data-splitting>featured work</div>
-												<div class="subtitle splitting-text-anim-1" data-splitting>Let’s</div>
+												<div class="label splitting-text-anim-1" data-splitting>destaque</div>
+												<div class="subtitle splitting-text-anim-1" data-splitting>Design é</div>
 												<div class="title">
 													<div class="title-inner splitting-text-anim-2" data-splitting>
-														have <br />
-														fun. <br />
+														estética<br />
+														<em>&</em> <strong>inovação.</strong>
 														be fit!
 													</div>
 												</div>
@@ -238,7 +231,7 @@
 									</div>
 								</div>
 								<div class="view-btn">
-									<a href="work-single-v2.html" data-splitting class="splitting-text-anim-1">view work</a>
+									<a href="work-single-v2.html" data-splitting class="splitting-text-anim-1">veja os trabalhos</a>
 								</div>
 							</div>
 
@@ -256,20 +249,20 @@
 										<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 									
 											<div class="titles dark center">
-												<div class="label splitting-text-anim-1" data-splitting>featured work</div>
+												<div class="label splitting-text-anim-1" data-splitting>destaque</div>
 												<div class="title">
 													<div class="title-inner splitting-text-anim-2" data-splitting>
-														God is in the details
+														O Design mora nos detalhes
 													</div>
 												</div>
-												<div class="subtitle splitting-text-anim-1" data-splitting>Let’s create beautiful world</div>
+												<div class="subtitle splitting-text-anim-1" data-splitting>Pela diversidade artística</div>
 											</div>
 
 										</div>
 									</div>
 								</div>
 								<div class="view-btn">
-									<a href="work-single.html" data-splitting class="splitting-text-anim-1">view work</a>
+									<a href="work-single.html" data-splitting class="splitting-text-anim-1">destaque</a>
 								</div>
 							</div>
 
