--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
 											<!-- title -->
 											<div class="titles">
-												<div class="label splitting-text-anim-1" data-splitting>destque</div>
+												<div class="label splitting-text-anim-1" data-splitting>destaque</div>
 												<div class="subtitle splitting-text-anim-1" data-splitting>Design é</div>
 												<div class="title">
 													<div class="title-inner splitting-text-anim-2" data-splitting>
@@ -214,19 +214,16 @@
 								<div class="container">
 									<div class="row">
 										<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-									
 											<div class="titles right dark">
 												<div class="label splitting-text-anim-1" data-splitting>destaque</div>
 												<div class="subtitle splitting-text-anim-1" data-splitting>Design é</div>
 												<div class="title">
 													<div class="title-inner splitting-text-anim-2" data-splitting>
 														estética<br />
-														<em>&</em> <strong>inovação.</strong>
-														be fit!
+														em ação.<br />
 													</div>
 												</div>
 											</div>
-
 										</div>
 									</div>
 								</div>
