--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 											</ul>
 										</li>
 										<li class="has-children">
-											<a href="#" class="splitting-text-anim-2" data-splitting="chars">about</a>
+											<a href="#" class="splitting-text-anim-2" data-splitting="chars">sobre</a>
 											<ul>
 												<li class="scrolla-element-anim-1">
 													<a href="about-us.html" class="splitting-text-anim-1" data-splitting="chars">quem somos</a>
@@ -110,7 +110,7 @@
 											</ul>
 										</li>
 										<li class="has-children">
-											<a href="#" class="splitting-text-anim-2" data-splitting="chars">trabalhos</a>
+											<a href="#" class="splitting-text-anim-2" data-splitting="chars">trabalho</a>
 											<ul>
 												<li class="scrolla-element-anim-1">
 													<a href="works-2-column.html" class="splitting-text-anim-1" data-splitting="chars">trabalhos coluna 2</a>
