--- a/index.html
+++ b/index.html
@@ -135,12 +135,6 @@
 												</li>
 											</ul>
 										</li>
-										<li>
-											<a href="contacts.html" class="splitting-text-anim-2" data-splitting="chars">contato</a>
-										</li>
-										<li>
-											<a href="blog.html" class="splitting-text-anim-2" data-splitting="chars">blog</a>
-										</li>
 									</ul>
 								</div>
 		
@@ -259,7 +253,7 @@
 									</div>
 								</div>
 								<div class="view-btn">
-									<a href="work-single.html" data-splitting class="splitting-text-anim-1">destaque</a>
+									<a href="work-single.html" data-splitting class="splitting-text-anim-1">veja os trabalhos</a>
 								</div>
 							</div>
 
