--- a/index.html
+++ b/index.html
@@ -82,19 +82,13 @@
 											<a href="#" class="splitting-text-anim-2" data-splitting="chars">início</a>
 											<ul>
 												<li class="scrolla-element-anim-1">
-													<a href="index.html" class="splitting-text-anim-1" data-splitting="chars">slider principal</a>
+													<a href="index.html" class="splitting-text-anim-1" data-splitting="chars">main slider</a>
 												</li>
 												<li class="scrolla-element-anim-1">
-													<a href="index-half.html" class="splitting-text-anim-1" data-splitting="chars">slider parcial</a>
+													<a href="index-half.html" class="splitting-text-anim-1" data-splitting="chars">half slider</a>
 												</li>
 												<li class="scrolla-element-anim-1">
-													<a href="index-fullscreen.html" class="splitting-text-anim-1" data-splitting="chars">slider tela cheia</a>
-												</li>
-												<li class="scrolla-element-anim-1">
-													<a href="index-carousel.html" class="splitting-text-anim-1" data-splitting="chars">carrossel horizontal</a>
-												</li>
-												<li class="scrolla-element-anim-1">
-													<a href="index-onepage.html" class="splitting-text-anim-1" data-splitting="chars">onepage</a>
+													<a href="index-fullscreen.html" class="splitting-text-anim-1" data-splitting="chars">fullscreen slider</a>
 												</li>
 											</ul>
 										</li>
@@ -113,25 +107,13 @@
 											<a href="#" class="splitting-text-anim-2" data-splitting="chars">trabalho</a>
 											<ul>
 												<li class="scrolla-element-anim-1">
-													<a href="works-2-column.html" class="splitting-text-anim-1" data-splitting="chars">trabalhos coluna 2</a>
+													<a href="work-single.html" class="splitting-text-anim-1" data-splitting="chars">webdesign</a>
 												</li>
 												<li class="scrolla-element-anim-1">
-													<a href="works-3-column.html" class="splitting-text-anim-1" data-splitting="chars">trabalhos coluna 3</a>
+													<a href="works-3-column.html" class="splitting-text-anim-1" data-splitting="chars">concept design</a>
 												</li>
 												<li class="scrolla-element-anim-1">
-													<a href="works-creative.html" class="splitting-text-anim-1" data-splitting="chars">trabalhos criativos</a>
-												</li>
-												<li class="scrolla-element-anim-1">
-													<a href="gallery-2-column.html" class="splitting-text-anim-1" data-splitting="chars">galeria coluna 2</a>
-												</li>
-												<li class="scrolla-element-anim-1">
-													<a href="gallery-3-column.html" class="splitting-text-anim-1" data-splitting="chars">galeria coluna 3</a>
-												</li>
-												<li class="scrolla-element-anim-1">
-													<a href="work-single.html" class="splitting-text-anim-1" data-splitting="chars">trabalho simples</a>
-												</li>
-												<li class="scrolla-element-anim-1">
-													<a href="work-single-v2.html" class="splitting-text-anim-1" data-splitting="chars">trabalho simples 2</a>
+													<a href="works-2-column.html" class="splitting-text-anim-1" data-splitting="chars">creative design</a>
 												</li>
 											</ul>
 										</li>
@@ -145,10 +127,10 @@
 		
 				<!-- social -->
 				<div class="menu-social-links">
-					<a href="#" target="blank" class="splitting-text-anim-1" data-splitting="chars">
+					<a href="https://github.com/davecraft37" target="blank" class="splitting-text-anim-1" data-splitting="chars">
 						Github
 					</a>
-					<a href="#" target="blank" class="splitting-text-anim-1" data-splitting="chars">
+					<a href="https://www.workana.com/freelancer/ec1048047cdf3b10728ba174835d5eeb" target="blank" class="splitting-text-anim-1" data-splitting="chars">
 						Workana
 					</a>
 				</div>
