--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 												<div class="title">
 													<div class="title-inner splitting-text-anim-2" data-splitting>
 														estética<br />
-														em ação.<br />
+														em ação<br />
 													</div>
 												</div>
 											</div>
@@ -228,7 +228,7 @@
 														O Design mora nos detalhes
 													</div>
 												</div>
-												<div class="subtitle splitting-text-anim-1" data-splitting>Pela diversidade artística</div>
+												<div class="subtitle splitting-text-anim-1" data-splitting>E a Arte é sua vizinha</div>
 											</div>
 
 										</div>
