--- a/conceptdesign.html
+++ b/conceptdesign.html
@@ -96,10 +96,10 @@
 											<a href="#" class="splitting-text-anim-2" data-splitting="chars">sobre</a>
 											<ul>
 												<li class="scrolla-element-anim-1">
-													<a href="about-us.html" class="splitting-text-anim-1" data-splitting="chars">quem somos</a>
+													<a href="quem-somos.html" class="splitting-text-anim-1" data-splitting="chars">quem somos</a>
 												</li>
 												<li class="scrolla-element-anim-1">
-													<a href="about.html" class="splitting-text-anim-1" data-splitting="chars">sobre nós</a>
+													<a href="sobre-nos.html" class="splitting-text-anim-1" data-splitting="chars">sobre nós</a>
 												</li>
 											</ul>
 										</li>
@@ -107,13 +107,13 @@
 											<a href="#" class="splitting-text-anim-2" data-splitting="chars">trabalho</a>
 											<ul>
 												<li class="scrolla-element-anim-1">
-													<a href="work-single.html" class="splitting-text-anim-1" data-splitting="chars">webdesign</a>
+													<a href="webdesign.html" class="splitting-text-anim-1" data-splitting="chars">webdesign</a>
 												</li>
 												<li class="scrolla-element-anim-1">
-													<a href="works-3-column.html" class="splitting-text-anim-1" data-splitting="chars">concept design</a>
+													<a href="conceptdesign.html" class="splitting-text-anim-1" data-splitting="chars">concept design</a>
 												</li>
 												<li class="scrolla-element-anim-1">
-													<a href="works-2-column.html" class="splitting-text-anim-1" data-splitting="chars">creative design</a>
+													<a href="creativedesign.html" class="splitting-text-anim-1" data-splitting="chars">creative design</a>
 												</li>
 											</ul>
 										</li>
@@ -172,31 +172,34 @@
 						<a href="#" class="splitting-text-anim-1 scroll-animate active" data-href=".works-col" data-splitting="chars" data-animate="active">
 							All
 						</a>
-						<a href="#" class="splitting-text-anim-1 scroll-animate" data-href=".sorting-branding" data-splitting="chars" data-animate="active">
-							Branding
+						<a href="#" class="splitting-text-anim-1 scroll-animate" data-href=".sorting-wildlife" data-splitting="chars" data-animate="active">
+							Wildlife
+						</a>
+						<a href="#" class="splitting-text-anim-1 scroll-animate" data-href=".sorting-motion" data-splitting="chars" data-animate="active">
+							Motion
 						</a>
 						<a href="#" class="splitting-text-anim-1 scroll-animate" data-href=".sorting-fashion" data-splitting="chars" data-animate="active">
 							Fashion
 						</a>
-						<a href="#" class="splitting-text-anim-1 scroll-animate" data-href=".sorting-portraits" data-splitting="chars" data-animate="active">
-							Portraits
+						<a href="#" class="splitting-text-anim-1 scroll-animate" data-href=".sorting-food" data-splitting="chars" data-animate="active">
+							Food
 						</a>
 					</div>
 
 					<!-- works items -->
-					<div class="works-items row classic column-2-offset">
+					<div class="works-items row classic column-3-offset">
 
-						<div class="works-col col-xs-12 col-sm-6 col-md-6 col-lg-6 sorting-fashion">
+						<div class="works-col col-xs-12 col-sm-6 col-md-6 col-lg-4 sorting-food">
 							<div class="works-item scrolla-element-anim-1 scroll-animate" data-animate="active">
 								<a href="work-single.html">
 									<span class="image">
 										<span class="img">
-											<img src="images/work_c1.jpg" alt="" />
+											<img src="images/work1.jpg" alt="" />
 										</span>
 									</span>
 									<span class="desc">
 										<span class="category splitting-text-anim-3" data-splitting="words">
-											Fashion
+											Food
 										</span>
 										<span class="name splitting-text-anim-3" data-splitting="words">
 											How to Photograph Food without a Tripod
@@ -206,17 +209,17 @@
 							</div>
 						</div>
 
-						<div class="works-col col-xs-12 col-sm-6 col-md-6 col-lg-6 sorting-portraits">
+						<div class="works-col col-xs-12 col-sm-6 col-md-6 col-lg-4 sorting-motion">
 							<div class="works-item scrolla-element-anim-1 scroll-animate" data-animate="active">
 								<a href="work-single-v2.html">
 									<span class="image">
 										<span class="img">
-											<img src="images/work_c2.jpg" alt="" />
+											<img src="images/work2.jpg" alt="" />
 										</span>
 									</span>
 									<span class="desc">
 										<span class="category splitting-text-anim-3" data-splitting="words">
-											Portraits
+											Motion
 										</span>
 										<span class="name splitting-text-anim-3" data-splitting="words">
 											How to Do Panning Photography
@@ -226,17 +229,17 @@
 							</div>
 						</div>
 
-						<div class="works-col col-xs-12 col-sm-6 col-md-6 col-lg-6 sorting-branding">
+						<div class="works-col col-xs-12 col-sm-6 col-md-6 col-lg-4 sorting-wildlife">
 							<div class="works-item scrolla-element-anim-1 scroll-animate" data-animate="active">
 								<a href="work-single.html">
 									<span class="image">
 										<span class="img">
-											<img src="images/work_c3.jpg" alt="" />
+											<img src="images/work3.jpg" alt="" />
 										</span>
 									</span>
 									<span class="desc">
 										<span class="category splitting-text-anim-3" data-splitting="words">
-											Branding
+											Wildlife
 										</span>
 										<span class="name splitting-text-anim-3" data-splitting="words">
 											3 Ways To Level Up Your Photography
@@ -246,17 +249,17 @@
 							</div>
 						</div>
 
-						<div class="works-col col-xs-12 col-sm-6 col-md-6 col-lg-6 sorting-branding">
+						<div class="works-col col-xs-12 col-sm-6 col-md-6 col-lg-4 sorting-fashion">
 							<div class="works-item scrolla-element-anim-1 scroll-animate" data-animate="active">
 								<a href="work-single-v2.html">
 									<span class="image">
 										<span class="img">
-											<img src="images/work_c4.jpg" alt="" />
+											<img src="images/work4.jpg" alt="" />
 										</span>
 									</span>
 									<span class="desc">
 										<span class="category splitting-text-anim-3" data-splitting="words">
-											Branding
+											Fashion
 										</span>
 										<span class="name splitting-text-anim-3" data-splitting="words">
 											My Style My Choise Lighthouse
@@ -266,17 +269,17 @@
 							</div>
 						</div>
 
-						<div class="works-col col-xs-12 col-sm-6 col-md-6 col-lg-6 sorting-portraits">
+						<div class="works-col col-xs-12 col-sm-6 col-md-6 col-lg-4 sorting-fashion">
 							<div class="works-item scrolla-element-anim-1 scroll-animate" data-animate="active">
 								<a href="work-single.html">
 									<span class="image">
 										<span class="img">
-											<img src="images/work_c5.jpg" alt="" />
+											<img src="images/work5.jpg" alt="" />
 										</span>
 									</span>
 									<span class="desc">
 										<span class="category splitting-text-anim-3" data-splitting="words">
-											Portraits
+											Fashion
 										</span>
 										<span class="name splitting-text-anim-3" data-splitting="words">
 											5 Expert’s tips for How to Become
@@ -286,17 +289,17 @@
 							</div>
 						</div>
 
-						<div class="works-col col-xs-12 col-sm-6 col-md-6 col-lg-6 sorting-fashion">
+						<div class="works-col col-xs-12 col-sm-6 col-md-6 col-lg-4 sorting-motion">
 							<div class="works-item scrolla-element-anim-1 scroll-animate" data-animate="active">
 								<a href="work-single-v2.html">
 									<span class="image">
 										<span class="img">
-											<img src="images/work_c6.jpg" alt="" />
+											<img src="images/work6.jpg" alt="" />
 										</span>
 									</span>
 									<span class="desc">
 										<span class="category splitting-text-anim-3" data-splitting="words">
-											Fashion
+											Motion
 										</span>
 										<span class="name splitting-text-anim-3" data-splitting="words">
 											7 Body-weight Exercises You Can Do
