--- a/creativedesign.html
+++ b/creativedesign.html
@@ -96,10 +96,10 @@
 											<a href="#" class="splitting-text-anim-2" data-splitting="chars">sobre</a>
 											<ul>
 												<li class="scrolla-element-anim-1">
-													<a href="about-us.html" class="splitting-text-anim-1" data-splitting="chars">quem somos</a>
+													<a href="quem-somos.html" class="splitting-text-anim-1" data-splitting="chars">quem somos</a>
 												</li>
 												<li class="scrolla-element-anim-1">
-													<a href="about.html" class="splitting-text-anim-1" data-splitting="chars">sobre nós</a>
+													<a href="sobre-nos.html" class="splitting-text-anim-1" data-splitting="chars">sobre nós</a>
 												</li>
 											</ul>
 										</li>
@@ -107,13 +107,13 @@
 											<a href="#" class="splitting-text-anim-2" data-splitting="chars">trabalho</a>
 											<ul>
 												<li class="scrolla-element-anim-1">
-													<a href="work-single.html" class="splitting-text-anim-1" data-splitting="chars">webdesign</a>
+													<a href="webdesign.html" class="splitting-text-anim-1" data-splitting="chars">webdesign</a>
 												</li>
 												<li class="scrolla-element-anim-1">
-													<a href="works-3-column.html" class="splitting-text-anim-1" data-splitting="chars">concept design</a>
+													<a href="conceptdesign.html" class="splitting-text-anim-1" data-splitting="chars">concept design</a>
 												</li>
 												<li class="scrolla-element-anim-1">
-													<a href="works-2-column.html" class="splitting-text-anim-1" data-splitting="chars">creative design</a>
+													<a href="creativedesign.html" class="splitting-text-anim-1" data-splitting="chars">creative design</a>
 												</li>
 											</ul>
 										</li>
@@ -172,34 +172,31 @@
 						<a href="#" class="splitting-text-anim-1 scroll-animate active" data-href=".works-col" data-splitting="chars" data-animate="active">
 							All
 						</a>
-						<a href="#" class="splitting-text-anim-1 scroll-animate" data-href=".sorting-wildlife" data-splitting="chars" data-animate="active">
-							Wildlife
-						</a>
-						<a href="#" class="splitting-text-anim-1 scroll-animate" data-href=".sorting-motion" data-splitting="chars" data-animate="active">
-							Motion
+						<a href="#" class="splitting-text-anim-1 scroll-animate" data-href=".sorting-branding" data-splitting="chars" data-animate="active">
+							Branding
 						</a>
 						<a href="#" class="splitting-text-anim-1 scroll-animate" data-href=".sorting-fashion" data-splitting="chars" data-animate="active">
 							Fashion
 						</a>
-						<a href="#" class="splitting-text-anim-1 scroll-animate" data-href=".sorting-food" data-splitting="chars" data-animate="active">
-							Food
+						<a href="#" class="splitting-text-anim-1 scroll-animate" data-href=".sorting-portraits" data-splitting="chars" data-animate="active">
+							Portraits
 						</a>
 					</div>
 
 					<!-- works items -->
-					<div class="works-items row classic column-3-offset">
+					<div class="works-items row classic column-2-offset">
 
-						<div class="works-col col-xs-12 col-sm-6 col-md-6 col-lg-4 sorting-food">
+						<div class="works-col col-xs-12 col-sm-6 col-md-6 col-lg-6 sorting-fashion">
 							<div class="works-item scrolla-element-anim-1 scroll-animate" data-animate="active">
 								<a href="work-single.html">
 									<span class="image">
 										<span class="img">
-											<img src="images/work1.jpg" alt="" />
+											<img src="images/work_c1.jpg" alt="" />
 										</span>
 									</span>
 									<span class="desc">
 										<span class="category splitting-text-anim-3" data-splitting="words">
-											Food
+											Fashion
 										</span>
 										<span class="name splitting-text-anim-3" data-splitting="words">
 											How to Photograph Food without a Tripod
@@ -209,17 +206,17 @@
 							</div>
 						</div>
 
-						<div class="works-col col-xs-12 col-sm-6 col-md-6 col-lg-4 sorting-motion">
+						<div class="works-col col-xs-12 col-sm-6 col-md-6 col-lg-6 sorting-portraits">
 							<div class="works-item scrolla-element-anim-1 scroll-animate" data-animate="active">
 								<a href="work-single-v2.html">
 									<span class="image">
 										<span class="img">
-											<img src="images/work2.jpg" alt="" />
+											<img src="images/work_c2.jpg" alt="" />
 										</span>
 									</span>
 									<span class="desc">
 										<span class="category splitting-text-anim-3" data-splitting="words">
-											Motion
+											Portraits
 										</span>
 										<span class="name splitting-text-anim-3" data-splitting="words">
 											How to Do Panning Photography
@@ -229,17 +226,17 @@
 							</div>
 						</div>
 
-						<div class="works-col col-xs-12 col-sm-6 col-md-6 col-lg-4 sorting-wildlife">
+						<div class="works-col col-xs-12 col-sm-6 col-md-6 col-lg-6 sorting-branding">
 							<div class="works-item scrolla-element-anim-1 scroll-animate" data-animate="active">
 								<a href="work-single.html">
 									<span class="image">
 										<span class="img">
-											<img src="images/work3.jpg" alt="" />
+											<img src="images/work_c3.jpg" alt="" />
 										</span>
 									</span>
 									<span class="desc">
 										<span class="category splitting-text-anim-3" data-splitting="words">
-											Wildlife
+											Branding
 										</span>
 										<span class="name splitting-text-anim-3" data-splitting="words">
 											3 Ways To Level Up Your Photography
@@ -249,17 +246,17 @@
 							</div>
 						</div>
 
-						<div class="works-col col-xs-12 col-sm-6 col-md-6 col-lg-4 sorting-fashion">
+						<div class="works-col col-xs-12 col-sm-6 col-md-6 col-lg-6 sorting-branding">
 							<div class="works-item scrolla-element-anim-1 scroll-animate" data-animate="active">
 								<a href="work-single-v2.html">
 									<span class="image">
 										<span class="img">
-											<img src="images/work4.jpg" alt="" />
+											<img src="images/work_c4.jpg" alt="" />
 										</span>
 									</span>
 									<span class="desc">
 										<span class="category splitting-text-anim-3" data-splitting="words">
-											Fashion
+											Branding
 										</span>
 										<span class="name splitting-text-anim-3" data-splitting="words">
 											My Style My Choise Lighthouse
@@ -269,17 +266,17 @@
 							</div>
 						</div>
 
-						<div class="works-col col-xs-12 col-sm-6 col-md-6 col-lg-4 sorting-fashion">
+						<div class="works-col col-xs-12 col-sm-6 col-md-6 col-lg-6 sorting-portraits">
 							<div class="works-item scrolla-element-anim-1 scroll-animate" data-animate="active">
 								<a href="work-single.html">
 									<span class="image">
 										<span class="img">
-											<img src="images/work5.jpg" alt="" />
+											<img src="images/work_c5.jpg" alt="" />
 										</span>
 									</span>
 									<span class="desc">
 										<span class="category splitting-text-anim-3" data-splitting="words">
-											Fashion
+											Portraits
 										</span>
 										<span class="name splitting-text-anim-3" data-splitting="words">
 											5 Expert’s tips for How to Become
@@ -289,17 +286,17 @@
 							</div>
 						</div>
 
-						<div class="works-col col-xs-12 col-sm-6 col-md-6 col-lg-4 sorting-motion">
+						<div class="works-col col-xs-12 col-sm-6 col-md-6 col-lg-6 sorting-fashion">
 							<div class="works-item scrolla-element-anim-1 scroll-animate" data-animate="active">
 								<a href="work-single-v2.html">
 									<span class="image">
 										<span class="img">
-											<img src="images/work6.jpg" alt="" />
+											<img src="images/work_c6.jpg" alt="" />
 										</span>
 									</span>
 									<span class="desc">
 										<span class="category splitting-text-anim-3" data-splitting="words">
-											Motion
+											Fashion
 										</span>
 										<span class="name splitting-text-anim-3" data-splitting="words">
 											7 Body-weight Exercises You Can Do
