--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
 											<a href="#" class="splitting-text-anim-2" data-splitting="chars">sobre</a>
 											<ul>
 												<li class="scrolla-element-anim-1">
-													<a href="about-us.html" class="splitting-text-anim-1" data-splitting="chars">quem somos</a>
+													<a href="quem-somos.html" class="splitting-text-anim-1" data-splitting="chars">quem somos</a>
 												</li>
 												<li class="scrolla-element-anim-1">
-													<a href="about.html" class="splitting-text-anim-1" data-splitting="chars">sobre nós</a>
+													<a href="sobre-nos.html" class="splitting-text-anim-1" data-splitting="chars">sobre nós</a>
 												</li>
 											</ul>
 										</li>
@@ -107,13 +107,13 @@
 											<a href="#" class="splitting-text-anim-2" data-splitting="chars">trabalho</a>
 											<ul>
 												<li class="scrolla-element-anim-1">
-													<a href="work-single.html" class="splitting-text-anim-1" data-splitting="chars">webdesign</a>
+													<a href="webdesign.html" class="splitting-text-anim-1" data-splitting="chars">webdesign</a>
 												</li>
 												<li class="scrolla-element-anim-1">
-													<a href="works-3-column.html" class="splitting-text-anim-1" data-splitting="chars">concept design</a>
+													<a href="conceptdesign.html" class="splitting-text-anim-1" data-splitting="chars">concept design</a>
 												</li>
 												<li class="scrolla-element-anim-1">
-													<a href="works-2-column.html" class="splitting-text-anim-1" data-splitting="chars">creative design</a>
+													<a href="creativedesign.html" class="splitting-text-anim-1" data-splitting="chars">creative design</a>
 												</li>
 											</ul>
 										</li>
