--- a/quem-somos.html
+++ b/quem-somos.html
@@ -107,13 +107,13 @@
 											<a href="#" class="splitting-text-anim-2" data-splitting="chars">trabalho</a>
 											<ul>
 												<li class="scrolla-element-anim-1">
-													<a href="webdesign.html" class="splitting-text-anim-1" data-splitting="chars">webdesign</a>
+													<a href="work-single.html" class="splitting-text-anim-1" data-splitting="chars">webdesign</a>
 												</li>
 												<li class="scrolla-element-anim-1">
-													<a href="conceptdesign.html" class="splitting-text-anim-1" data-splitting="chars">concept design</a>
+													<a href="works-3-column.html" class="splitting-text-anim-1" data-splitting="chars">concept design</a>
 												</li>
 												<li class="scrolla-element-anim-1">
-													<a href="creativedesign.html" class="splitting-text-anim-1" data-splitting="chars">creative design</a>
+													<a href="works-2-column.html" class="splitting-text-anim-1" data-splitting="chars">creative design</a>
 												</li>
 											</ul>
 										</li>
