--- a/index-onepage.html
+++ b/index-onepage.html
@@ -190,7 +190,7 @@
 
 											<!-- title -->
 											<div class="titles">
-												<div class="label splitting-text-anim-1" data-splitting>featured work</div>
+												<div class="label splitting-text-anim-1" data-splitting>destaque</div>
 												<div class="subtitle splitting-text-anim-1" data-splitting>Photographs are just</div>
 												<div class="title">
 													<div class="title-inner splitting-text-anim-2" data-splitting>
@@ -205,7 +205,7 @@
 									</div>
 								</div>
 								<div class="view-btn">
-									<a href="work-single.html" data-splitting class="splitting-text-anim-1">view work</a>
+									<a href="work-single.html" data-splitting class="splitting-text-anim-1">veja os trabalhos</a>
 								</div>
 							</div>
 
@@ -223,7 +223,7 @@
 										<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 									
 											<div class="titles right dark">
-												<div class="label splitting-text-anim-1" data-splitting>featured work</div>
+												<div class="label splitting-text-anim-1" data-splitting>destaque</div>
 												<div class="subtitle splitting-text-anim-1" data-splitting>Let’s</div>
 												<div class="title">
 													<div class="title-inner splitting-text-anim-2" data-splitting>
@@ -238,7 +238,7 @@
 									</div>
 								</div>
 								<div class="view-btn">
-									<a href="work-single-v2.html" data-splitting class="splitting-text-anim-1">view work</a>
+									<a href="work-single-v2.html" data-splitting class="splitting-text-anim-1">veja os trabalhos</a>
 								</div>
 							</div>
 
@@ -256,7 +256,7 @@
 										<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 									
 											<div class="titles dark center">
-												<div class="label splitting-text-anim-1" data-splitting>featured work</div>
+												<div class="label splitting-text-anim-1" data-splitting>destaque</div>
 												<div class="title">
 													<div class="title-inner splitting-text-anim-2" data-splitting>
 														God is in the details
@@ -269,7 +269,7 @@
 									</div>
 								</div>
 								<div class="view-btn">
-									<a href="work-single.html" data-splitting class="splitting-text-anim-1">view work</a>
+									<a href="work-single.html" data-splitting class="splitting-text-anim-1">veja os trabalhos</a>
 								</div>
 							</div>
 
