--- a/index-fullscreen.html
+++ b/index-fullscreen.html
@@ -155,7 +155,7 @@
 							<!-- slide titles -->
 							<div class="slide-titles">
 								<div class="titles">
-									<div class="label splitting-text-anim-1" data-splitting>featured work</div>
+									<div class="label splitting-text-anim-1" data-splitting>destaque</div>
 									<div class="title">
 										<div class="title-inner splitting-text-anim-2" data-splitting>
 											photo.
@@ -163,7 +163,7 @@
 									</div>
 								</div>
 								<div class="view-btn">
-									<a href="work-single.html" data-splitting class="splitting-text-anim-1">view work</a>
+									<a href="work-single.html" data-splitting class="splitting-text-anim-1">veja os trabalhos</a>
 								</div>
 							</div>
 
@@ -177,7 +177,7 @@
 							<!-- slide titles -->
 							<div class="slide-titles">
 								<div class="titles">
-									<div class="label splitting-text-anim-1" data-splitting>featured work</div>
+									<div class="label splitting-text-anim-1" data-splitting>destaque</div>
 									<div class="title">
 										<div class="title-inner splitting-text-anim-2" data-splitting>
 											fashion.
@@ -185,7 +185,7 @@
 									</div>
 								</div>
 								<div class="view-btn">
-									<a href="work-single-v2.html" data-splitting class="splitting-text-anim-1">view work</a>
+									<a href="work-single-v2.html" data-splitting class="splitting-text-anim-1">veja os trabalhos</a>
 								</div>
 							</div>
 
@@ -199,7 +199,7 @@
 							<!-- slide titles -->
 							<div class="slide-titles">
 								<div class="titles">
-									<div class="label splitting-text-anim-1" data-splitting>featured work</div>
+									<div class="label splitting-text-anim-1" data-splitting>destaque</div>
 									<div class="title">
 										<div class="title-inner splitting-text-anim-2" data-splitting>
 											wildlife.
@@ -207,7 +207,7 @@
 									</div>
 								</div>
 								<div class="view-btn">
-									<a href="work-single.html" data-splitting class="splitting-text-anim-1">view work</a>
+									<a href="work-single.html" data-splitting class="splitting-text-anim-1">veja os trabalhos</a>
 								</div>
 							</div>
 
