--- a/index-half.html
+++ b/index-half.html
@@ -155,18 +155,18 @@
 							<!-- slide titles -->
 							<div class="slide-titles">
 								<div class="titles">
-									<div class="label splitting-text-anim-1" data-splitting>featured work</div>
+									<div class="label splitting-text-anim-1" data-splitting>destaque</div>
 									<div class="title">
 										<div class="title-inner splitting-text-anim-1" data-splitting>
-											Let’s have fun. <br />be fit.
+											O Design mora nos detalhes
 										</div>
 									</div>
 									<div class="text splitting-text-anim-4" data-splitting>
-										Aliquam erat volutpat. Quisque vitae odio at odio congue elementum. Fusce purus nibh, bibendum non
+										Em cada projeto, o design se revela na escolha minuciosa de cores, formas e texturas.
 									</div>
 								</div>
 								<div class="view-btn">
-									<a href="work-single.html" data-splitting class="splitting-text-anim-1">view work</a>
+									<a href="work-single.html" data-splitting class="splitting-text-anim-1">veja os trabalhos</a>
 								</div>
 							</div>
 
@@ -180,18 +180,18 @@
 							<!-- slide titles -->
 							<div class="slide-titles">
 								<div class="titles">
-									<div class="label splitting-text-anim-1" data-splitting>featured work</div>
+									<div class="label splitting-text-anim-1" data-splitting>destaque</div>
 									<div class="title">
 										<div class="title-inner splitting-text-anim-1" data-splitting>
-											fashion.
+											Design é técnica & paixão
 										</div>
 									</div>
 									<div class="text splitting-text-anim-4" data-splitting>
-										Aliquam erat volutpat. Quisque vitae odio at odio congue elementum. Fusce purus nibh, bibendum non
+										O design depende da habilidade que sobrevive de criações inspiradas e de absoluta funcionalidade.
 									</div>
 								</div>
 								<div class="view-btn">
-									<a href="work-single-v2.html" data-splitting class="splitting-text-anim-1">view work</a>
+									<a href="work-single-v2.html" data-splitting class="splitting-text-anim-1">veja os trabalhos</a>
 								</div>
 							</div>
 
@@ -205,18 +205,18 @@
 							<!-- slide titles -->
 							<div class="slide-titles">
 								<div class="titles">
-									<div class="label splitting-text-anim-1" data-splitting>featured work</div>
+									<div class="label splitting-text-anim-1" data-splitting>destaque</div>
 									<div class="title">
 										<div class="title-inner splitting-text-anim-1" data-splitting>
-											Let’s create beautiful world.
+											Design é estética em ação
 										</div>
 									</div>
 									<div class="text splitting-text-anim-4" data-splitting>
-										Aliquam erat volutpat. Quisque vitae odio at odio congue elementum. Fusce purus nibh, bibendum non
+										Traduzimos e transformamos conceitos visuais de forma dinâmica, prática e inédita.
 									</div>
 								</div>
 								<div class="view-btn">
-									<a href="work-single.html" data-splitting class="splitting-text-anim-1">view work</a>
+									<a href="work-single.html" data-splitting class="splitting-text-anim-1">veja os trabalhos</a>
 								</div>
 							</div>
 
