--- a/index-half.html
+++ b/index-half.html
@@ -162,7 +162,7 @@
 										</div>
 									</div>
 									<div class="text splitting-text-anim-4" data-splitting>
-										Em cada projeto, o design se revela na escolha minuciosa de cores, formas e texturas.
+										Em cada projeto, redescobrimos a escolha minuciosa de cores, formas e texturas.
 									</div>
 								</div>
 								<div class="view-btn">
@@ -187,7 +187,7 @@
 										</div>
 									</div>
 									<div class="text splitting-text-anim-4" data-splitting>
-										O design depende da habilidade que sobrevive de criações inspiradas e de absoluta funcionalidade.
+										Desenvolvemos a habilidade que se nutre de criações inspiradoras e de absoluta funcionalidade.
 									</div>
 								</div>
 								<div class="view-btn">
