--- a/index-fullscreen.html
+++ b/index-fullscreen.html
@@ -158,7 +158,7 @@
 									<div class="label splitting-text-anim-1" data-splitting>destaque</div>
 									<div class="title">
 										<div class="title-inner splitting-text-anim-2" data-splitting>
-											photo.
+											paixão
 										</div>
 									</div>
 								</div>
@@ -180,7 +180,7 @@
 									<div class="label splitting-text-anim-1" data-splitting>destaque</div>
 									<div class="title">
 										<div class="title-inner splitting-text-anim-2" data-splitting>
-											fashion.
+											estética
 										</div>
 									</div>
 								</div>
@@ -202,7 +202,7 @@
 									<div class="label splitting-text-anim-1" data-splitting>destaque</div>
 									<div class="title">
 										<div class="title-inner splitting-text-anim-2" data-splitting>
-											wildlife.
+											detalhes
 										</div>
 									</div>
 								</div>
