--- a/quem-somos.html
+++ b/quem-somos.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<title>Oblo - Showcase Portfolio & Agency Template</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta http-equiv="Content-Type" content="text/html">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="HandheldFriendly" content="true">
@@ -151,10 +151,10 @@
 							<!-- titles -->
 							<div class="h-titles">
 								<div class="h-subtitle red splitting-text-anim-1 scroll-animate" data-splitting="chars" data-animate="active">
-									Let’s create beautiful world
+									O design habita em nós
 								</div>
 								<div class="h-title splitting-text-anim-2 scroll-animate" data-splitting="chars" data-animate="active">
-									about us
+									quem somos
 								</div>
 							</div>
 
